--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,23 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Homework 2</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body></body>
+  <body>
+    <section class="menu">
+      <div class="wrapper-menu">
+        <h1 class="menu-header">Menu</h1>
+        <ul class="menu-list">
+          <li class="menu-item">
+            <a class="menu-link" href="./1-timer.html">Timer</a>
+          </li>
+          <li class="menu-item">
+            <a class="menu-link" href="./2-snackbar.html">Snackbar</a>
+          </li>
+        </ul>
+      </div>
+    </section>
+  </body>
 </html>
