--- a/src/2-snackbar.html
+++ b/src/2-snackbar.html
@@ -17,7 +17,7 @@
     <div class="wrapper">
       <form class="form">
         <span class="label">Delay (ms)</span>
-        <input class="input-delay" type="text" id="datetime-picker" />
+        <input class="input-delay" type="text" id="datetime-picker" required />
         <fieldset class="fieldset">
           <legend>State</legend>
           <label>
